# rda-fair-mappings

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  examples.Makefile  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: case-study.yml  use-case.yml
.github/workflows/: docs.yml  prepare-pages.yml  use-case.yml
case-study/case-study-ariadne/: index.html
case-study/case-study-bfoprov/: index.html
case-study/case-study-bodc/: index.html
case-study/case-study-ceon/: index.html
case-study/case-study-comp-loinc/: index.html
case-study/case-study-datacite-schemaorg/: index.html
case-study/case-study-dcat-ap-datacite/: index.html
case-study/case-study-dcat-ap-schemaorg/: index.html
case-study/case-study-dlite/: index.html
case-study/case-study-dlite-transform/: index.html
case-study/case-study-food/: index.html
case-study/case-study-fresh/: index.html
case-study/case-study-i-adopt/: index.html
case-study/case-study-icos/: index.html
case-study/case-study-inrae/: index.html
case-study/case-study-lgbtq/: index.html
case-study/case-study-linkml-map/: index.html
case-study/case-study-linkml-map-normalization/: index.html
case-study/case-study-linkml-map-subset/: index.html
decision-log/: index.html
docs/: decision-log.md  index.md  model.md  recommendation.md  resources.md  use-cases.md
integration/: index.html
model/: index.html
recommendation/: index.html
related-efforts/: index.html
resources/: index.html
search/: search_index.json
use-cases/: index.html
(+125 files in other folders)
