[project]
name = "rda-fair-mappings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-table-reader-plugin>=3.1.0",
    "pymdown-extensions>=10.19.1",
    "python-frontmatter>=1.1.0",
]
